crates/musa/tests/snapshots/cli__analyze_facts_window_json.snap
---
source: crates/musa/tests/cli.rs
expression: "String::from_utf8_lossy(&output.stdout)"
---
{
  "kind": "facts",
  "method": "reads the score's own statements: what sounds, what rests, what is written above the staff, and what is in force",
  "assumptions": [
    "the score compiled: an analysis reads a finished snapshot, never half-resolved source",
    "written spelling is kept: `d#4` is reported as D-sharp and never as E-flat",
    "nothing outside the requested scope and window was read, and nothing about it is claimed"
  ],
  "findings": [
    {
      "code": "sounding-pitch",
      "standing": "fact",
      "summary": "F5 sounds for 1/2",
      "at": {
        "numerator": 1,
        "denominator": 1
      },
      "bar": 2,
      "beat": {
        "numerator": 1,
        "denominator": 1
      },
      "evidence": {
        "kind": "event",
        "part": "piano",
        "voice": "lead",
        "event": "event-3",
        "span": {
          "start": 948,
          "end": 952
        },
        "line": 32
      },
      "grounds": []
    },
    {
      "code": "sounding-pitch",
      "standing": "fact",
      "summary": "E5 sounds for 1/2",
      "at": {
        "numerator": 3,
        "denominator": 2
      },
      "bar": 2,
      "beat": {
        "numerator": 3,
        "denominator": 1
      },
      "evidence": {
        "kind": "event",
        "part": "piano",
        "voice": "lead",
        "event": "event-4",
        "span": {
          "start": 973,
          "end": 977
        },
        "line": 33
      },
      "grounds": []
    }
  ]
}
