crates/musa/tests/snapshots/cli__bar-too-long.snap
---
source: crates/musa/tests/cli.rs
expression: "String::from_utf8_lossy(&output.stderr)"
---
does-not-add-up

  × this bar is 1/4 too long
    ╭─[examples/broken/bar-too-long.musa:12:17]
 11 │                 | c4/4 d4/4 e4/4 f4/4
 12 │                 | g4/4 a4/4 b4/4 c5/4 d5/4
    ·                 ─────────────┬────────────
    ·                              ╰── these add up to 5/4
 13 │             }
    ╰────
  help: shorten a duration, or move the last of these into the next bar

  note: `meter 4/4` makes a bar 1

1 problem (1 error)
