crates/musa/tests/snapshots/cli__bar-too-short.snap
---
source: crates/musa/tests/cli.rs
expression: "String::from_utf8_lossy(&output.stderr)"
---
does-not-add-up

  × this bar is 1/4 short
    ╭─[examples/broken/bar-too-short.musa:13:17]
 12 │                 | c4/4 d4/4 e4/4
 13 │                 | f4/4 g4/4
    ·                 ─────┬─────
    ·                      ╰── these add up to 1/2
 14 │             }
    ╰────
  help: add `rest/4`, or lengthen one of the durations

  note: `meter 3/4` makes a bar 3/4
  fix: add `rest/4`
       13:28: insert ` rest/4`

1 problem (1 error)
