crates/musa/tests/snapshots/cli__chord-class-is-not-music.snap
---
source: crates/musa/tests/cli.rs
expression: "String::from_utf8_lossy(&output.stderr)"
---
type-mismatch

  × expected `Music`, found `ChordClass`
    ╭─[examples/broken/chord-class-is-not-music.musa:14:21]
 13 │             voice line {
 14 │                 use tonic;
    ·                     ──┬──
    ·                       ╰── this has type `ChordClass`
 15 │             }
    ╰────
  help: a chord class has no register: `close_position` or `voiced_as` chooses the pitches,
        and `sound_for` gives the result a duration

1 problem (1 error)
